k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # telling kubernetes we want to create a ingress controller based on nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true' # to resolve regex 404 errors on google cloud
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # for removing 'api' from request and just putting '/'
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # routing for client path
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000
          - path: /api/?(.*) # routing for server path
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
